--- a/vue/helloworld.html
+++ b/vue/helloworld.html
@@ -11,7 +11,7 @@
         </ul>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="./vue.js"></script>
     <script>
         var app = new Vue({
             el : '#app',
